--- a/App.Web/src/app/dashboard/dashboard.component.css
+++ b/App.Web/src/app/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 /* DashboardComponent's private CSS styles */
-[class*='col-'] {
+/*[class*='col-'] {
   float: left;
   padding-right: 20px;
   padding-bottom: 20px;
@@ -75,4 +75,4 @@ h4 {
   .module {
     min-width: 60px;
   }
-}
+}*/
