--- a/App.Web/src/styles.css
+++ b/App.Web/src/styles.css
@@ -1,5 +1,7 @@
 /* Application-wide Styles */
-h1 {
+
+@import 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css';
+/*h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
@@ -18,8 +20,8 @@ body {
 body, input[text], button {
   color: #888;
   font-family: Cambria, Georgia;
-}
+}*/
 /* everywhere else */
-* {
+/** {
   font-family: Arial, Helvetica, sans-serif;
-}
+}*/
